--- a/Taller1_TCP/app/src/main/res/layout/activity_main.xml
+++ b/Taller1_TCP/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:layout_editor_absoluteY="25dp">
 
     <Button
         android:id="@+id/btn_conectar_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="62dp"
+        android:layout_marginBottom="60dp"
+        android:backgroundTint="@color/sw"
         android:text="Enviar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,13 +21,16 @@
     <EditText
         android:id="@+id/edt_ip_main"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="222dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="292dp"
+        android:backgroundTint="@color/sw"
         android:ems="10"
         android:hint="Nombre"
-        android:backgroundTint="@color/colorAccent"
         android:inputType="textPersonName"
+        android:textColor="@color/sw"
+        android:textColorHint="@color/sw"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,12 +38,27 @@
         android:id="@+id/edt_nombre_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
+        android:layout_marginBottom="152dp"
+        android:backgroundTint="@color/sw"
         android:ems="10"
-        android:hint="Numero IP"
-        android:backgroundTint="@color/colorAccent"
+        android:hint="Número IP"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/edt_ip_main"
-        app:layout_constraintTop_toBottomOf="@+id/edt_ip_main" />
+        android:singleLine="false"
+        android:textColor="@color/sw"
+        android:textColorHint="@color/sw"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="260dp"
+        android:layout_height="146dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/app" />
 
 </android.support.constraint.ConstraintLayout>
